--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/amqplib": "^0.10.1",
     "@types/jest": "29.5.2",
     "@types/node": "^20.3.2",
+    "@types/uuid": "^9.0.2",
     "eslint-plugin-simple-import-sort": "10.0.0",
     "gts": "3.1.0",
     "jest": "27.2.3",
@@ -24,7 +25,9 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "amqplib": "0.10.3"
+    "@heronlabs/presenter-env": "^3.1.0",
+    "amqplib": "0.10.3",
+    "uuid": "^9.0.0"
   },
   "prettier": "gts/.prettierrc.json",
   "eslintConfig": {
